[package]
name = "owasm-abi"
version = "0.3.0"
authors = ["NikVolf <nikvolf@gmail.com>", "Alexey Frolov <alexey@parity.io>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-abi"
description = "Rust WebAssembly Contracts Abi"
keywords = ["wasm", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]
exclude = [ "tests/*", "derive/*" ]
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
owasm-std = "0.20.1"
byteorder = { version = "1.2", default-features = false }

[dev-dependencies]
hex-literal = "0.1"

[features]
default = []
strict = []
