[package]
name = "owasm-gen"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
cargo = "0.32.0"
clap = "2.24"
owasm-abi-utils = { path = "../utils" }
proc-macro2 = "0.4"
quote = "0.6"
serde = "1.0.80"
serde_derive = "1.0.80"
syn = "0.15"
toml = "0.4.10"

[features]
default = ["syn/full", "syn/parsing"]
