[package]
name = "owasm-abi-derive"
version = "0.1.16"
authors = ["NikVolf <nikvolf@gmail.com>", "Oasis Labs <info@oasislabs.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-abi"
homepage = "https://github.com/oasislabs/owasm-abi"
documentation = "https://docs.rs/crate/owasm-abi-derive"
description = "Rust WebAssembly Contracts ABI (derive macros)"
keywords = ["wasm", "oasis", "oasislabs", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]

[profile.release]
panic = "abort"

[dependencies]
quote = "0.6.8"
syn = { version = "0.15.12", features = ["full", "extra-traits"] }
proc-macro2 = "0.4"

tiny-keccak = { version = "1.4.2", default-features = false }
byteorder = { version = "1.2.3", default-features = false }
parity-hash = { version = "1.2.2", default-features = false }
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"

[lib]
name = "owasm_abi_derive"
proc-macro = true
