[package]
name = "owasm-abi-derive"
version = "0.3.0"
authors = ["NikVolf <nikvolf@gmail.com>", "Alexey Frolov <alexey@parity.io>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-abi"
documentation = "https://paritytech.github.io/pwasm-abi/pwasm_abi/"
description = "Rust WebAssembly Contracts Abi (derive macros)"
keywords = ["wasm", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
owasm-abi-utils = { path = "../utils" }
owasm-std = "0.20.1"
proc-macro2 = "0.4"
quote = "0.6.8"
syn = { version = "0.15.12", features = ["full", "extra-traits"] }

tiny-keccak = { version = "1.4.2", default-features = false }
byteorder = { version = "1.2.3", default-features = false }

serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"

[lib]
name = "owasm_abi_derive"
proc-macro = true
