[package]
name = "owasm-abi-tests"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]

[dependencies]
owasm-std = "0.10"
pwasm-test = { git = "https://github.com/paritytech/pwasm-test", optional = true }
owasm-abi = { path = "..", default-features=false }
owasm-abi-derive = { path = "../derive" }
owasm-ethereum = "0.7.0"

[features]
default = []
test = ["pwasm-test", "owasm-std/std", "owasm-ethereum/std"]
