[package]
name = "test-contract"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-std = "0.1"
owasm-abi = "0.2"
owasm-abi-derive = "0.2"
owasm-ethereum = "0.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
incremental = false
